--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,9 @@
--->1. sprawdziæ po adresie email czy istnieje taki uzytkownik i jesli istnieje wyswitlic komunikat bledu w labelce"email zajety"
--->2. na widoku uzytkownicy dodac przycisk "dodaj uzytkownika", uruchamia okno dodawania jako modal i nie mozna przejsc pod spod.
-anuluj -zamyka okno;
--->3. rozpoznac kontrolke data grid
--->3,5. na starcie aplikacji dodac metodê któr doda 2 testowych uzytkownikow do listy repozytorium
---> podpiac liste uzytkownikow pod kontrolke;
-5. nag³owki w gridzie
--->6. ostylowaæ
--->7. po dodaniu uzytkownika odswiezyc data grid "uzytkownicy";
-8. rozpoznac sortowanie data grida
--->9. wyszukiwanie w gridzie po imieniu nazwisku i mailu w jednym polu
--->10. filtrowanie po roli
-
+->1. poprawic txtbox filtrowania
+->2. filtrowanie 2 opcji na raz
+3. sprawdzanie przy dodawaniu uzytkownikow czy juz taki e-mail jest
+4. logowanie - zrobic testowanie i walidacje
+5. poprawic wyswietlenie roli w dodawaniu
+6. dodac nowe klasy nauczyciel, rodzic uczen i admin dziedziczace po uzytkowniku
+7. pole List<uczen> Dzieci u rodzica i pole klasa u ucznia
+8. w zaleznosci od roli wyswietlic odpowiednie txtboxy
+9. ogarnac wyszukiwanie nazwisk uczniow. 
