--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,3 @@
--->1. Pozmieniac nazwy repozytoriów.
-2. Uzupelnic repozytorium klas w bazie
--->3. Zmienic przedmiot(dodaæ ID)
--->4. dodaæ tabelê przedmioty.
--->5. Utworzyc repozytorium przedmiotów w bazie
+1.dodac komunikat typu: dodano obecnosci itp
+2. wielkosci dobrac
+3. uzupelnic baze
